--- a/templates/blogs/base.html
+++ b/templates/blogs/base.html
@@ -50,7 +50,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand" href="{ % url 'posts_list' %}">Blog</a>
+        <a class="navbar-brand" href="{% url 'posts_list' %}">Blog</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -67,9 +67,9 @@
                 </li>
                 <li class="nav-item">
                     {% if not request.user.is_authenticated %}
-                    <a class="nav-link" href="{ % url 'login' %}">Login</a>
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
                     {% else %}
-                    <a class="nav-link" href="{ % url 'logout' %}">Logout</a>
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     {% endif %}
                 </li>
                 <li class="nav-item">
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h1>{% block title %}FastCampus Blog{% endblock %}</h1>
+                    <h1>{% block title %}FC TisTory{% endblock %}</h1>
                     <span class="subheading"></span>
                 </div>
             </div>
