--- a/templates/blogs/base.html
+++ b/templates/blogs/base.html
@@ -127,7 +127,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="copyright text-muted">Copyright &copy; FastCampus Blog 2019</p>
+                <p class="copyright text-muted">Copyright &copy; FastCampus TisTory 2019</p>
             </div>
         </div>
     </div>
