--- a/templates/blogs/base.html
+++ b/templates/blogs/base.html
@@ -41,60 +41,71 @@
           });
         });
       });
-
     </script>
     {% block head %}
     {% endblock %}
 </head>
 <body>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-        <a class="navbar-brand" href="{% url 'posts_list' %}">Blog</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-            Menu
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{ % url 'posts_list' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    {% if not request.user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
-                    {% else %}
-                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                    {% endif %}
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-- Page Header -->
-<header class="masthead">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
-                <div class="site-heading">
-                    <h1>{% block title %}FC TisTory{% endblock %}</h1>
-                    <span class="subheading"></span>
+<div class="row">
+    <div class="col"></div>
+    <div class="col-10">
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+            <div class="container">
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'posts_list' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'user' %}">About</a>
+                        </li>
+                        <li class="nav-item">
+                            {% if not request.user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
+                        </li>
+                            {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                            {% endif %}
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </div>
+        </nav>
+        <!-- Page Header -->
+        <header class="masthead">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-md-10 mx-auto">
+                        <div class="site-heading">
+                            <h1>{% block title %}FC TisTory{% endblock %}</h1>
+                            <span class="subheading"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
     </div>
-</header>
+    <div class="col"></div>
+</div>
 {% block content %}
-
+<div class="row">
+    <div class="col"></div>
+    <div class="col-10">
+    </div>
+    <div class="col"></div>
+</div>
 {% endblock %}
 <!-- Footer -->
 <footer>
@@ -119,7 +130,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#">
+                        <a href="https://github.com/HeeeeeJinJeong">
                         <span class="fa-stack fa-lg">
                           <i class="fas fa-circle fa-stack-2x"></i>
                           <i class="fab fa-github fa-stack-1x fa-inverse"></i>
