--- a/templates/blogs/posts_list.html
+++ b/templates/blogs/posts_list.html
@@ -1,30 +1,35 @@
 {% extends "blogs/base.html" %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <a href="{% url 'post_write' %}" class="btn btn-primary float-right">글쓰기</a>
-        </div>
-        {% for post in posts %}
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="post-preview">
-                <a href="{% url 'post_detail' post.id %}">
-                    <h2 class="post-title">
-                        {{ post.title }}
-                    </h2>
-                    <h3 class="post-subtitle">
-                        <!-- 지정된 문자 수보다 긴 문자열 잘라내기 잘린 문자열은 ("...") 끝난다!  -->
-                        {{ post.content|truncatechars:5 }}
-                    </h3>
-                </a>
-                <p class="post-meta">Posted by
-                    <a href="#">{{ post.user }}</a>
-                    {{ post.created_at }}</p>
-            </div>
-        </div>
-        {% endfor %}
-        <hr>
+<div class="row">
+    <div class="col"></div>
+
+    <div class="mx-auto">
+        <a href="{% url 'post_write' %}" class="btn btn-primary float-right">글쓰기</a>
     </div>
+    <div class="col-8">
+        <table class="table table-hover text-center">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">제목</th>
+                <th scope="col">작성자</th>
+                <th scope="col">작성날짜</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for post in posts %}
+            <tr>
+                <th scope="row">{{post.id}}</th>
+                <td><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></td>
+                <td>{{ post.user.username }}</td>
+                <td>{{ post.created_at }}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+    </div>
+    <div class="col"></div>
 </div>
 {% endblock %}
