--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,15 +4,20 @@
 {% block page %}login{% endblock %}
 
 {% block content %}
-<div style="padding-left:50px; padding-top:50px;">
-  <h1>Login</h1>
-  <hr>
-  <form method="post" action="{% url 'login' %}">
-  {% csrf_token %}
-  <input type="hidden" name="next" value="" />
-  {{ form.as_p }}
-  <button class="btn btn-primary" type="submit">로그인</button>
-  </form>
+<div class="row">
+    <div class="col"></div>
+    <div class="col-6">
+        <h1 class="text-center">Login</h1>
+        <hr>
+        <div style="padding-left:50px; padding-top:50px;">
+            <form method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <input type="hidden" name="next" value=""/>
+                {{ form.as_p }}
+                <button class="btn btn-primary" type="submit">로그인</button>
+            </form>
+        </div>
+    </div>
+    <div class="col"></div>
 </div>
-
 {% endblock %}
