--- a/templates/blogs/post_detail.html
+++ b/templates/blogs/post_detail.html
@@ -16,19 +16,26 @@
         </div>
     </div>
 
-<!--    like_section-->
+    <!--    like_section-->
     <div id="#like_section">
-        {% include 'blogs/like_section.html' %}
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-10">
+                {% include 'blogs/like_section.html' %}
+            </div>
+            <div class="col"></div>
+        </div>
     </div>
 
     <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col col-md-10 mx-auto">
             <!-- 태그 달기 -->
             {% for tag in post.tags.all %}
-                <span class="badge badge-dark">#{{ tag.name }}</span>
+            <span class="badge badge-dark">#{{ tag.name }}</span>
             {% endfor %}
 
             <!-- 소셜 공유 -->
+
             <button type="button" class="btn btn-light float-right ml-1">
                 {% post_to_facebook post.get_absolute "facebook" %}
             </button>
@@ -44,9 +51,10 @@
     <!-- 댓글 목록 -->
     <div class="container">
         <div class="row">
-            <div class="col-md-12 comment-bg">
+            <div class="col"></div>
+            <div class="col-10">
                 <div class="page-header">
-                    <h1>Comments</h1>
+                    <h2>Comments</h2>
                 </div>
                 <div class="comments-list">
                     {% for comment in comments %}
@@ -74,9 +82,8 @@
                         {% endfor %}
                     </ul>
                     {% endif %}
-                    <h3>댓글 쓰기</h3>
                     <form method="post" action="{% url 'comment_write' %}" enctype="multipart/form-data"
-                          class="col-lg-8 col-md-10 mx-auto">
+                          class="col-lg-12 col-md-10 mx-auto">
                         {% csrf_token %}
                         <input type="hidden" name="post_id" value="{{ post.id }}">
                         <div class="form-group row">
@@ -88,6 +95,7 @@
                     </form>
                 </div>
             </div>
+            <div class="col"></div>
         </div>
     </div>
 </div>
